# AssemblyLab

./: .gitignore  build.bat  build_all.bat  build_lab10.bat  link.bat  my.md  run.bat  run_all.bat  run_link.bat  stdout.txt  test.bat
.github/workflows/: as.yml  nasm_build.yml
Lab10/: test_hello.asm
Lab4/: lab4_1_2.asm  lab4_3.asm
Lab5/: lab5_1.asm
cpu_instruction_check/: CMakeLists.txt  main.c
mem_init_demo/: CMakeLists.txt  main.c
video_conference_demo/: CMakeLists.txt  image_processing.c  main.c  network.c  video_capture.c  video_processing.asm
video_conference_demo_nasm/: CMakeLists.txt  audio_processing.c  video_processing.asm
